migration of mod to api.v2 stage 1